fix whitespace and scroll issues on place pages

--- a/static/css/place/place_page.scss
+++ b/static/css/place/place_page.scss
@@ -273,7 +273,8 @@ $chart-border: 0.5px solid #dee2e6;
 }
 
 #sidebar-region.fixed {
-  height: 100vh;
+  // height: 100vh;
+  bottom: 0;
   overflow-y: auto;
   position: fixed;
   top: 0;
